# Camera

./: ACA.py  BFS.py  MV1.py  kbhit.py  led.py
C++/ConfigAndGrab_Console_Online_DR/: CMakeLists.txt  ConfigAndGrab_Console_Online_DR.cpp
C++/ConfigAndGrab_Console_OpenCV/: CMakeLists.txt  ConfigAndGrab_Console_OpenCV.cpp
C++/ConfigAndGrab_Console_SoftwareTrigger/: CMakeLists.txt  ConfigAndGrab_Console_SoftwareTrigger.cpp
C++/ConnectConfigAndGrab_Console/: CMakeLists.txt  ConnectConfigAndGrab_Console.cpp
C++/Console_Offline_DR_OpenCV/: CMakeLists.txt  Console_Offline_DR_OpenCV.cpp
C++/DiscoverConfigAndGrab_Console/: CMakeLists.txt  DiscoverConfigAndGrab_Console.cpp
C++/LoadAndSaveConfigurationFile_Console/: CMakeLists.txt  ConfigurationFile.txt  LoadAndSaveConfigurationFile_Console.cpp
C++/pfDoubleRate_Demodulate_File/: CMakeLists.txt  image.dr1  pfDoubleRate_Demodulate_File.cpp
V2/: ConfigAndGrab_Color_DR_Console_OpenCV.py  ConfigAndGrab_Console.py  ConfigAndGrab_Console_OpenCV.py  ConfigAndGrab_DR_Console_OpenCV.py  requirements.txt
